@@ -15,7 +15,6 @@ describe 'sssd::service::sudo' do
             .with_content(%r(ExecStartPre=-/bin/chown sssd:sssd /var/log/sssd/sssd_sudo.log))
             .with_content(/User=root/)
             .with_content(/Group=root/)
-            .with_daemon_reload('eager')
             .with_selinux_ignore_defaults(true)
         }
         it {
