@@ -1,3 +1,6 @@
+* Fri Jun 03 2022 Chris Tessmer <chris.tessmer@onyxpoint.com> - 7.4.0
+- Update from camptocamp/systemd to puppet/systemd
+
 * Thu May 26 2022 Chris Tessmer <chris.tessmer@onyxpoint.com> - 7.3.0
 - Changed:
   - Made provider parameters Optional to support certain AD/realmd configurations:
